Description
0.4.12-dev-822-ge587316 gcc dbg linux
Expected result
When the font-combobox is expanded, it should consume much more (but contrary to what the screenshot does imply, most likely not necessarily all available vertical space of the parent window)
xpsp3.png
Observed result
The expanded combobox is too small in y.
0.4.12-dev-822-ge587316_Abiword_windowed.png
0.4.12-dev-822-ge587316_AbiWord_maximized.png
0.4.12-dev-822-ge587316.log
Sidenote
The ros bug is very old, as this historic screenshot (of older Abiword 2.6.4) proves r60602
That Win7-comparison-picture also shows, that the combobox does have a maximum requested height even if the screen resolution is set to a very big value.
Attachments
Issue Links
- is blocked by
-
CORE-16252 Setup stage 2: Date and Time list has regressed
-
- Resolved
-
-
CORE-18769 [COMCTL32] Comboboxes v6 with many elements do auto-close erroneously with low vertical resolution when clicking on the text
-
- Resolved
-
-
CORE-18665 [TIMEDATE] The expanded comboboxes height should not be bigger than the dialog
-
- Resolved
-