[COMCTL32] Combobox Implement logic for set and get dropdown height CORE-15833

by import of Wine commit
https://source.winehq.org/git/wine.git/commit/313c63e194aebdd517b3a85f8fe4d83acf170b62
merged from current Wine head.

Thanks to patches author Fabian Maurer
and also Doug Lyons for tests and adding initial the merge-patch.